fix loc name wrapping

--- a/styles/locations.module.sass
+++ b/styles/locations.module.sass
@@ -13,6 +13,7 @@
   grid-area: h
   display: flex
   align-items: baseline
+  flex-wrap: wrap
   > p
     font-size: 0.9rem
     margin: 0
